--- a/Application/src/main/AndroidManifest.xml
+++ b/Application/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
 -->
 
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.android.wearable.watchface">
+    package="com.astifter.circatext">
 
     <uses-sdk
         android:minSdkVersion="18"
@@ -35,10 +35,10 @@
         android:theme="@style/AppTheme">
 
         <activity
-            android:name=".DigitalWatchFaceCompanionConfigActivity"
+            android:name=".CircaTextConfigActivity"
             android:label="@string/app_name">
             <intent-filter>
-                <action android:name="com.example.android.wearable.watchface.CONFIG_DIGITAL" />
+                <action android:name="com.astifter.circatext.CONFIG_DIGITAL" />
 
                 <category android:name="com.google.android.wearable.watchface.category.COMPANION_CONFIGURATION" />
                 <category android:name="android.intent.category.DEFAULT" />
