--- a/Wearable/src/main/AndroidManifest.xml
+++ b/Wearable/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
 -->
 
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-        package="com.example.android.wearable.watchface" >
+        package="com.astifter.circatext" >
 
     <uses-sdk android:minSdkVersion="21"
         android:targetSdkVersion="21" />
@@ -26,7 +26,6 @@
     <uses-permission android:name="com.google.android.permission.PROVIDE_BACKGROUND" />
     <uses-permission android:name="android.permission.WAKE_LOCK" />
 
-    <!-- Calendar permission used by CalendarWatchFaceService -->
     <uses-permission android:name="android.permission.READ_CALENDAR" />
 
     <application
@@ -35,7 +34,7 @@
             android:label="@string/app_name" >
 
         <service
-                android:name=".DigitalWatchFaceService"
+                android:name=".CircaTextService"
                 android:label="@string/digital_name"
                 android:permission="android.permission.BIND_WALLPAPER" >
             <meta-data
@@ -49,10 +48,10 @@
                     android:resource="@drawable/preview_digital_circular" />
             <meta-data
                     android:name="com.google.android.wearable.watchface.companionConfigurationAction"
-                    android:value="com.example.android.wearable.watchface.CONFIG_DIGITAL" />
+                    android:value="com.astifter.circatext.CONFIG_DIGITAL" />
             <meta-data
                     android:name="com.google.android.wearable.watchface.wearableConfigurationAction"
-                    android:value="com.example.android.wearable.watchface.CONFIG_DIGITAL" />
+                    android:value="com.astifter.circatext.CONFIG_DIGITAL" />
             <intent-filter>
                 <action android:name="android.service.wallpaper.WallpaperService" />
                 <category android:name="com.google.android.wearable.watchface.category.WATCH_FACE" />
@@ -64,35 +63,16 @@
             and android.intent.category.DEFAULT. -->
 
         <activity
-                android:name=".DigitalWatchFaceWearableConfigActivity"
+                android:name=".CircaTextWearableConfigActivity"
                 android:label="@string/digital_config_name">
             <intent-filter>
-                <action android:name="com.example.android.wearable.watchface.CONFIG_DIGITAL" />
+                <action android:name="com.astifter.circatext.CONFIG_DIGITAL" />
                 <category android:name="com.google.android.wearable.watchface.category.WEARABLE_CONFIGURATION" />
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
 
-        <service
-                android:name=".CalendarWatchFaceService"
-                android:label="@string/calendar_name"
-                android:permission="android.permission.BIND_WALLPAPER" >
-            <meta-data
-                    android:name="android.service.wallpaper"
-                    android:resource="@xml/watch_face" />
-            <meta-data
-                    android:name="com.google.android.wearable.watchface.preview"
-                    android:resource="@drawable/preview_calendar" />
-            <meta-data
-                    android:name="com.google.android.wearable.watchface.preview_circular"
-                    android:resource="@drawable/preview_calendar_circular" />
-            <intent-filter>
-                <action android:name="android.service.wallpaper.WallpaperService" />
-                <category android:name="com.google.android.wearable.watchface.category.WATCH_FACE" />
-            </intent-filter>
-        </service>
-
-        <service android:name=".DigitalWatchFaceConfigListenerService">
+        <service android:name=".CircaTextConfigListenerService">
             <intent-filter>
                 <action android:name="com.google.android.gms.wearable.BIND_LISTENER" />
             </intent-filter>
