--- a/Application/build.gradle
+++ b/Application/build.gradle
@@ -15,11 +15,11 @@ repositories {
 }
 
 dependencies {
-    compile "com.android.support:support-v4:21.0.2"
+    compile "com.android.support:support-v4:22.2.0"
     compile "com.android.support:support-v13:21.0.2"
     compile "com.android.support:cardview-v7:21.0.2"
-    compile 'com.google.android.support:wearable:1.1.+'
-    compile 'com.google.android.gms:play-services-wearable:7.3.0'
+    compile 'com.google.android.support:wearable:1.1.0'
+    compile 'com.google.android.gms:play-services-wearable:7.5.0'
     compile 'com.android.support:support-v13:22.1.0'
     wearApp project(':Wearable')
 }
