--- a/Wearable/src/main/AndroidManifest.xml
+++ b/Wearable/src/main/AndroidManifest.xml
@@ -15,10 +15,11 @@
 -->
 
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-        package="com.astifter.circatext" >
+    package="com.astifter.circatext">
 
-    <uses-sdk android:minSdkVersion="21"
-        android:targetSdkVersion="21" />
+    <uses-sdk
+        android:minSdkVersion="21"
+        android:targetSdkVersion="22" />
 
     <uses-feature android:name="android.hardware.type.watch" />
 
@@ -29,38 +30,35 @@
     <uses-permission android:name="android.permission.READ_CALENDAR" />
 
     <application
-            android:allowBackup="true"
-            android:icon="@drawable/ic_launcher"
-            android:label="@string/app_name" >
+        android:allowBackup="true"
+        android:icon="@drawable/ic_launcher"
+        android:label="@string/app_name">
 
         <service
-                android:name=".CircaTextService"
-                android:label="@string/digital_name"
-                android:permission="android.permission.BIND_WALLPAPER" >
+            android:name=".CircaTextService"
+            android:label="@string/digital_name"
+            android:permission="android.permission.BIND_WALLPAPER">
             <meta-data
-                    android:name="android.service.wallpaper"
-                    android:resource="@xml/watch_face" />
+                android:name="android.service.wallpaper"
+                android:resource="@xml/watch_face" />
             <meta-data
-                    android:name="com.google.android.wearable.watchface.preview"
-                    android:resource="@drawable/preview_digital" />
+                android:name="com.google.android.wearable.watchface.preview"
+                android:resource="@drawable/preview_digital" />
             <meta-data
-                    android:name="com.google.android.wearable.watchface.preview_circular"
-                    android:resource="@drawable/preview_digital_circular" />
+                android:name="com.google.android.wearable.watchface.preview_circular"
+                android:resource="@drawable/preview_digital_circular" />
             <meta-data
-                    android:name="com.google.android.wearable.watchface.companionConfigurationAction"
-                    android:value="com.astifter.circatext.CONFIG_DIGITAL" />
+                android:name="com.google.android.wearable.watchface.companionConfigurationAction"
+                android:value="com.astifter.circatext.CONFIG_DIGITAL" />
             <meta-data
-                    android:name="com.google.android.wearable.watchface.wearableConfigurationAction"
-                    android:value="com.astifter.circatext.CONFIG_DIGITAL" />
+                android:name="com.google.android.wearable.watchface.wearableConfigurationAction"
+                android:value="com.astifter.circatext.CONFIG_DIGITAL" />
+
             <intent-filter>
                 <action android:name="android.service.wallpaper.WallpaperService" />
                 <category android:name="com.google.android.wearable.watchface.category.WATCH_FACE" />
             </intent-filter>
         </service>
-
-        <!-- All intent-filters for config actions must include the categories
-            com.google.android.wearable.watchface.category.WEARABLE_CONFIGURATION
-            and android.intent.category.DEFAULT. -->
 
         <service android:name=".CircaTextConfigListenerService">
             <intent-filter>
@@ -69,8 +67,8 @@
         </service>
 
         <meta-data
-                android:name="com.google.android.gms.version"
-                android:value="@integer/google_play_services_version" />
+            android:name="com.google.android.gms.version"
+            android:value="@integer/google_play_services_version" />
 
     </application>
 
