--- a/Application/build.gradle
+++ b/Application/build.gradle
@@ -15,13 +15,14 @@ repositories {
 }
 
 dependencies {
-    compile "com.android.support:support-v4:22.2.0"
-    compile "com.android.support:support-v13:21.0.2"
-    compile "com.android.support:cardview-v7:21.0.2"
+    compile 'com.android.support:support-v4:22.2.0'
+    compile 'com.android.support:support-v13:21.0.2'
+    compile 'com.android.support:cardview-v7:21.0.2'
     compile 'com.google.android.support:wearable:1.1.0'
     compile 'com.google.android.gms:play-services-wearable:7.5.0'
     compile 'com.android.support:support-v13:22.1.0'
     wearApp project(':Wearable')
+    compile project(':CircaTextUtils')
 }
 
 // The sample build uses multiple directories to
@@ -35,17 +36,16 @@ List<String> dirs = [
 android {
     compileSdkVersion 22
     buildToolsVersion "22.0.1"
-
     defaultConfig {
-        minSdkVersion 18
+        minSdkVersion 17
         targetSdkVersion 22
+        versionCode 1
+        versionName '1.0'
     }
-
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_7
         targetCompatibility JavaVersion.VERSION_1_7
     }
-
     sourceSets {
         main {
             dirs.each { dir ->
