--- a/Application/build.gradle
+++ b/Application/build.gradle
@@ -39,7 +39,13 @@ android {
         minSdkVersion 17
         targetSdkVersion 22
         versionCode 1
-        versionName '1.0'
+        versionName "1.0"
+    }
+    buildTypes {
+        release {
+            minifyEnabled false
+            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+        }
     }
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_7
@@ -54,9 +60,7 @@ android {
         }
         androidTest.setRoot('tests')
         androidTest.java.srcDirs = ['tests/src']
-
     }
-
 }
 
 
