--- a/CircaTextUtils/src/main/AndroidManifest.xml
+++ b/CircaTextUtils/src/main/AndroidManifest.xml
@@ -1,7 +1,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.astifter.circatextutils">
 
-    <application android:allowBackup="true" android:fullBackupOnly="true" android:label="@string/app_name">
+    <application
+        android:allowBackup="true"
+        android:fullBackupOnly="true"
+        android:label="@string/app_name">
 
     </application>
 
