--- a/CircaTextUtils/src/main/AndroidManifest.xml
+++ b/CircaTextUtils/src/main/AndroidManifest.xml
@@ -1,3 +1,1 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="com.astifter.circatextutils">
-</manifest>
+<manifest package="com.astifter.circatextutils"></manifest>
