--- a/Application/src/main/AndroidManifest.xml
+++ b/Application/src/main/AndroidManifest.xml
@@ -14,6 +14,7 @@
 -->
 
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.astifter.circatext">
 
     <uses-permission android:name="com.google.android.permission.PROVIDE_BACKGROUND" />
@@ -24,10 +25,12 @@
 
     <application
         android:allowBackup="true"
+        android:fullBackupContent="@xml/mybackupscheme"
         android:fullBackupOnly="true"
-        android:icon="@drawable/ic_launcher"
+        android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme"
+        tools:ignore="UnusedAttribute">
         <activity
             android:name=".CircaTextConfigActivity"
             android:label="@string/app_name">
