--- a/Wearable/src/main/AndroidManifest.xml
+++ b/Wearable/src/main/AndroidManifest.xml
@@ -14,6 +14,7 @@
 -->
 
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.astifter.circatext">
 
     <uses-feature android:name="android.hardware.type.watch" />
@@ -25,8 +26,10 @@
 
     <application
         android:allowBackup="true"
+        android:fullBackupContent="@xml/mybackupscheme"
         android:fullBackupOnly="true"
-        android:label="@string/app_name">
+        android:label="@string/app_name"
+        tools:ignore="MissingApplicationIcon">
 
         <service
             android:name=".CircaTextService"
@@ -37,10 +40,10 @@
                 android:resource="@xml/watch_face" />
             <meta-data
                 android:name="com.google.android.wearable.watchface.preview"
-                android:resource="@drawable/circa_test_screenshot" />
+                android:resource="@mipmap/circa_test_screenshot" />
             <meta-data
                 android:name="com.google.android.wearable.watchface.preview_circular"
-                android:resource="@drawable/circa_test_screenshot" />
+                android:resource="@mipmap/circa_test_screenshot" />
             <meta-data
                 android:name="com.google.android.wearable.watchface.companionConfigurationAction"
                 android:value="com.astifter.circatext.CONFIG_DIGITAL" />
