--- a/Wearable/src/main/AndroidManifest.xml
+++ b/Wearable/src/main/AndroidManifest.xml
@@ -29,6 +29,7 @@
         android:fullBackupContent="@xml/mybackupscheme"
         android:fullBackupOnly="true"
         android:label="@string/app_name"
+        android:icon="@mipmap/ic_launcher"
         tools:ignore="MissingApplicationIcon">
 
         <service
@@ -40,10 +41,10 @@
                 android:resource="@xml/watch_face" />
             <meta-data
                 android:name="com.google.android.wearable.watchface.preview"
-                android:resource="@mipmap/circa_test_screenshot" />
+                android:resource="@drawable/screenshot_rect" />
             <meta-data
                 android:name="com.google.android.wearable.watchface.preview_circular"
-                android:resource="@mipmap/circa_test_screenshot" />
+                android:resource="@drawable/screenshot_round" />
             <meta-data
                 android:name="com.google.android.wearable.watchface.companionConfigurationAction"
                 android:value="com.astifter.circatext.CONFIG_DIGITAL" />
