--- a/Application/build.gradle
+++ b/Application/build.gradle
@@ -38,8 +38,8 @@ android {
     defaultConfig {
         minSdkVersion 18
         targetSdkVersion 23
-        versionCode 1
-        versionName "1.0"
+        versionCode project.circaTextVersionId.toInteger()
+        versionName project.circaTextVersion.toString()
     }
     buildTypes {
         release {
