--- a/CircaTextUtils/build.gradle
+++ b/CircaTextUtils/build.gradle
@@ -25,8 +25,8 @@ android {
     defaultConfig {
         minSdkVersion 18
         targetSdkVersion 23
-        versionCode 1
-        versionName "1.0"
+        versionCode project.circaTextVersionId.toInteger()
+        versionName project.circaTextVersion.toString()
     }
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_7
