Update version information.

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,3 +1,3 @@
-circaTextVersion=0.9
-circaTextVersionId=1
-circaTextId=com.astifter.circatext
+circaTextVersion=0.91
+circaTextVersionId=2
+circaTextId=com.astifter.circatext.beta
