--- a/.gitignore
+++ b/.gitignore
@@ -6,14 +6,7 @@
 
 # android studio
 /local.properties
-/.idea/encodings.xml
-/.idea/gradle.xml
-/.idea/vcs.xml
-/.idea/libraries/
-/.idea/misc.xml
-/.idea/workspace.xml
-*.iml
-/.idea/inspectionProfiles/
+/.idea/
 
 # built files
 /.gradle/
