--- a/Application/build.gradle
+++ b/Application/build.gradle
@@ -15,11 +15,11 @@ repositories {
 }
 
 dependencies {
-    compile 'com.android.support:support-v4:23.1.0'
-    compile 'com.android.support:support-v13:23.1.0'
-    compile 'com.android.support:cardview-v7:23.1.0'
+    compile 'com.android.support:support-v4:23.1.1'
+    compile 'com.android.support:support-v13:23.1.1'
+    compile 'com.android.support:cardview-v7:23.1.1'
     compile 'com.google.android.support:wearable:1.1.0'
-    compile 'com.google.android.gms:play-services-wearable:8.1.0'
+    compile 'com.google.android.gms:play-services-wearable:8.3.0'
     wearApp project(':Wearable')
     compile project(':CircaTextUtils')
 }
@@ -44,8 +44,7 @@ android {
     }
     buildTypes {
         release {
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android.txt')
+            minifyEnabled true
         }
     }
     compileOptions {
