--- a/Wearable/build.gradle
+++ b/Wearable/build.gradle
@@ -15,8 +15,8 @@ repositories {
 }
 
 dependencies {
-    compile 'com.google.android.gms:play-services-wearable:8.1.0'
-    compile 'com.android.support:support-v13:23.1.0'
+    compile 'com.google.android.gms:play-services-wearable:8.3.0'
+    compile 'com.android.support:support-v13:23.1.1'
     compile 'com.google.android.support:wearable:1.3.0'
     compile project(':CircaTextUtils')
 }
@@ -41,8 +41,7 @@ android {
     }
     buildTypes {
         release {
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android.txt')
+            minifyEnabled true
         }
     }
     compileOptions {
