Fixed inspection issues.

--- a/Application/src/main/AndroidManifest.xml
+++ b/Application/src/main/AndroidManifest.xml
@@ -30,7 +30,7 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme"
-        tools:ignore="UnusedAttribute">
+        tools:ignore="GoogleAppIndexingWarning">
         <activity
             android:name=".CircaTextConfigActivity"
             android:label="@string/app_name">
