--- a/gradle.properties
+++ b/gradle.properties
@@ -1,3 +1,4 @@
+# suppress inspection "UnusedProperty" for whole file
 circaTextVersion=0.91
 circaTextVersionId=2
 circaTextId=com.astifter.circatext.beta
