--- a/Application/build.gradle
+++ b/Application/build.gradle
@@ -39,6 +39,7 @@ android {
         applicationId project.circaTextId.toString()
         minSdkVersion 18
         targetSdkVersion 23
+        //noinspection GroovyAssignabilityCheck
         versionCode project.circaTextVersionId.toInteger()
         versionName project.circaTextVersion.toString()
     }
