--- a/CircaTextUtils/build.gradle
+++ b/CircaTextUtils/build.gradle
@@ -25,6 +25,7 @@ android {
     defaultConfig {
         minSdkVersion 18
         targetSdkVersion 23
+        //noinspection GroovyAssignabilityCheck
         versionCode project.circaTextVersionId.toInteger()
         versionName project.circaTextVersion.toString()
     }
